[tool.poetry]
name = "labtech"
version = "0.5.1"
license = "GPL-3.0-only"
description = "Easily run experiment permutations with multi-processing and caching."
authors = ["Ben Denham <ben@denham.nz>"]
readme = "README.md"
repository = "https://github.com/ben-denham/labtech"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = ">=3.10"
tqdm = "^4.66.2"
frozendict = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.10.0"
mkdocs = "^1.5.2"
mkdocstrings-python = "^1.5.2"
mkdocs-material = "^9.2.4"
mypy = "^1.9.0"
jupyterlab = "^4.1.5"
IPython = "8.23.0"
ipywidgets = "^8.1.2"
mlflow = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
