[project]
name = "labtech"
version = "0.8.1"
license = "GPL-3.0-only"
description = "Easily run experiment permutations with multi-processing and caching."
authors = [
    {name = "Ben Denham", email = "ben@denham.nz"},
]
readme = "README.md"
urls.repository = "https://github.com/ben-denham/labtech"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "tqdm>=4.66.2",
    "frozendict>=2.4.0",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "pytest>=7.1.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.10.0",
    "mkdocs>=1.5.2",
    "mkdocstrings-python>=1.5.2",
    "mkdocs-material>=9.2.4",
    "mypy>=1.9.0",
    "jupyterlab>=4.1.5",
    "IPython>=8.23.0",
    "ipywidgets>=8.1.2",
    "mlflow>=2.10.0",
    "types-tqdm>=4.66.0.20240417",
    "types-psutil>=5.9.5.20240516",
    "fsspec>=2025.3.2",
    "s3fs>=2025.3.2",
    "ray[default]>=2.44.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "labtech/",
  ".gitignore",
  ".python-version",
  "LICENSE",
  "pyproject.toml",
  "README.md",
  "uv.lock",
]
exclude = [
  "examples/",
  "docs/",
  "tests/",
]

[tool.mypy]
plugins = ["labtech/mypy_plugin.py"]

[[tool.mypy.overrides]]
module="fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="mlflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="ipywidgets.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 160
extend-exclude = ["tests/integration/readme/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "TC", "UP006", "UP007", "UP035", "UP037"]

[tool.ruff.lint.per-file-ignores]
# Ignore non-top-level imports, repeated imports, and unformatted imports in examples
"examples/*.ipynb" = ["E402", "F811", "I001", "TC"]

[tool.ruff.lint.flake8-type-checking]
strict = true
quote-annotations = true
